--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title>Studentski sistem</title>
 
     <link rel="stylesheet" type="text/css" href="/index.css" />
+
 </head>
 
 <body>
@@ -34,7 +35,7 @@
         </form>
     </main>
 
-    <script src="/js/index.js"></script>
+    <script src="/index.js"></script>
 </body>
 
 </html>
